# final_project_GoIT_Web

./: .env  .env_example  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 10799df237e1_fix7_model.py  2a2b2331e194_init.py  33074998d05f_fix1_model.py  3bf795c1f9ce_fix4_model.py  4462465ac638_fix3_model.py  52fb164233c1_fix5_model.py  60178a8be9c6_fix2_model.py  71a88a0afaed_init.py  d22c26bab12c_add_role.py  de83d605c697_fix6_model.py
src/conf/: config.py
src/database/: db.py
src/models/: models.py
src/repository/: images.py  users.py
src/routes/: auth.py  images.py
src/schemas/: images.py  user.py
src/services/: auth.py
